--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,64 @@ body {
 
 /* MAIN */
 
+main {
+    height: 90vh;
+    width: 80%;
+    margin: 0 auto;
+    min-width: 950px;
+    margin-top: 5vh;
+    background-color: white;
+}
+
+.left-main-top,
+.main-contacts {
+    width: 40%;
+    height: 100%;
+}
+
+.right-main-top,
+.main-messages {
+    width: 60%;
+    height: 100%;
+}
+
 /* Main-Top */
+.main-top {
+    width: 100%;
+    height: 100px;
+    background-color: #eaeaea;
+}
+
+.left-main-top {
+    background-color: antiquewhite;
+}
+
 
 /* Main-Bottom */
+.main-bottom {
+    width: 100%;
+    height: calc(100% - 100px);
+    background-color: aquamarine;
+    display: flex;
+}
+
+.main-contacts {
+    background-color: aliceblue;
+}
+
+.main-messages {
+
+}
+
+.main-messages-top {
+    width: 100%;
+    height: calc(100% - 100px);
+    background-color: bisque;
+}
+
+.main-messages-bottom {
+    height: 100px;
+    width: 100%;
+    background-color: lightcoral;
+}
+
