--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,16 @@ body {
     background-color: #009688;
 }
 
+html {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* UTILITY */
+.last-acc-mess {
+    color: #b1b1b1;
+    font-size: 1.2rem;
+}
+
 /* MAIN */
 
 main {
@@ -36,12 +46,56 @@ main {
 .main-top {
     width: 100%;
     height: 100px;
-    background-color: #eaeaea;
+    background-color: #f0f0f0;
+    display: flex;
 }
 
+/* Left-Main-Top */
 .left-main-top {
-    background-color: antiquewhite;
+    display: flex;
+    border-right: 1px solid #b1b1b1;
 }
+
+/* user-box */
+.user-box {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+
+.user-image img {
+    width: 70px;
+    border-radius: 50%;
+}
+
+.user-name {
+    margin-left: 10px;
+    font-size: 1.5rem;
+}
+
+/* User-button */
+.user-button {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 20px;
+    color: #b1b1b1;
+}
+
+.user-button .btn {
+    margin: 0 15px;
+    font-size: 1.7rem;
+}
+
+/* Right-Main-Top */
+.right-main-top {
+    display: flex;
+}
+
 
 
 /* Main-Bottom */
