--- a/css/style.css
+++ b/css/style.css
@@ -28,101 +28,88 @@ main {
     min-width: 950px;
     margin-top: 5vh;
     background-color: white;
-}
-
-.left-main-top,
-.main-contacts {
-    width: 40%;
-    height: 100%;
-}
-
-.right-main-top,
-.main-messages {
-    width: 60%;
-    height: 100%;
-}
-
-/* Main-Top */
-.main-top {
-    width: 100%;
-    height: 100px;
-    background-color: #f0f0f0;
     display: flex;
 }
 
-/* Left-Main-Top */
-.left-main-top {
+/* TEST */
+
+/* MAIN LEFT */
+/* Main Left Top */
+.main-left {
+    width: 40%;
+    height: 100%;
+    background-color: white;
+}
+
+.main-left-top {
+    width: 100%;
+    height: 70px;
+    background-color: #e4e4e4;
     display: flex;
     border-right: 1px solid #b1b1b1;
 }
 
-/* user-box */
-.user-box {
+.main-left-top .user-box {
     width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
-    padding-left: 20px;
+    padding-left: 10px;
 }
 
-.user-image img {
-    width: 70px;
+.main-left-top .user-image img {
+    width: 50px;
     border-radius: 50%;
 }
 
-.user-name {
-    margin-left: 10px;
-    font-size: 1.5rem;
-}
-
-/* User-button */
-.user-button {
+.main-left-top .user-button {
     width: 50%;
     height: 100%;
+    color: #b1b1b1;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding-right: 20px;
-    color: #b1b1b1;
+    padding-right: 10px;
 }
 
-.user-button .btn {
-    margin: 0 15px;
-    font-size: 1.7rem;
+.btn {
+    margin: 0 10px;
+    font-size: 1.3rem;
 }
 
-/* Right-Main-Top */
-.right-main-top {
+/*------ Main Left Contacts */
+/* Notifications Box */
+.notifications-box {
+    background-color: #8edafc;
     display: flex;
+    align-items: center;
+    padding: 15px 20px;
+}
+
+.notifications-box .notifications-icon {
+    border-radius: 50%;
+    font-size: 1.3rem;
+    padding: 11px 10px;
+    color: #8edafc;
+    background-color: white;
+    margin-right: 10px;
+}
+
+.notifications-text span:first-child {
+    font-size: .8rem;
+    font-weight: 550;
+}
+
+.notifications-text span a {
+    font-size: .8rem;
+    color: gray;
 }
 
 
 
-/* Main-Bottom */
-.main-bottom {
-    width: 100%;
-    height: calc(100% - 100px);
-    background-color: aquamarine;
-    display: flex;
+/* MAIN RIGHT */
+.main-right {
+    width: 60%;
+    height: 100%;
+    background-color: lightpink;
 }
-
-.main-contacts {
-    background-color: aliceblue;
-}
-
-.main-messages {
-
-}
-
-.main-messages-top {
-    width: 100%;
-    height: calc(100% - 100px);
-    background-color: bisque;
-}
-
-.main-messages-bottom {
-    height: 100px;
-    width: 100%;
-    background-color: lightcoral;
-}
-
