--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 /* UTILITY */
@@ -24,7 +24,7 @@ html {
 main {
     height: 90vh;
     width: 80%;
-    margin: 0 auto;
+    margin: auto ;
     min-width: 950px;
     margin-top: 5vh;
     background-color: white;
@@ -44,7 +44,7 @@ main {
 .main-left-top {
     width: 100%;
     height: 70px;
-    background-color: #e4e4e4;
+    background-color: #e9e8e8;
     display: flex;
     border-right: 1px solid #b1b1b1;
 }
@@ -79,6 +79,11 @@ main {
 
 /*------ Main Left Contacts */
 /* Notifications Box */
+.main-left-contacts {
+    width: 100%;
+    height: 100%;
+}
+
 .notifications-box {
     background-color: #8edafc;
     display: flex;
@@ -105,6 +110,78 @@ main {
     color: gray;
 }
 
+/* Contacts Input */
+.contacts-input-box {
+    padding: 7.5px;
+    background-color: #f3f3f3;
+}
+
+.contacts-input {
+    background-color: white;
+    width: 100%;
+    height: 30px;
+    display: flex;
+    box-shadow: .5px .5px 1px 1px rgba(214, 214, 214, 0.548);
+}
+
+.contacts-input .input-icon {
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 1px solid lightgray;
+    color: #b1b1b1;
+}
+
+.contacts-input input {
+    width: calc(100% - 80px);
+    border: transparent;
+    padding-left: 20px;
+}
+
+/* Contacts list */
+.contacts-list-box {
+    width: 100%;
+    height: calc(100% - 191px);
+    overflow: auto;
+}
+
+/* Contact Box */
+.contact-box {
+    align-items: center;
+    padding: 10px 5px 10px 20px;
+    position: relative;
+    border-bottom: 1px solid lightgrey;
+}
+
+.contact-box img {
+    width: 55px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.contact-user {
+    display: flex;
+}
+
+
+.contact-name-date h3 {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.contact-text {
+    font-size: .8rem;
+    color: #b1b1b1;
+}
+
+.contact-date {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    color: #b1b1b1;
+}
+
 
 
 /* MAIN RIGHT */
@@ -113,3 +190,5 @@ main {
     height: 100%;
     background-color: lightpink;
 }
+
+
