--- a/css/style.css
+++ b/css/style.css
@@ -288,35 +288,44 @@ main {
 }
 
 
-
-
-
-.main-right-center .container .sent-message {
-    /* max-width: 50%;
-    padding: 20px;
-    background-color: #d5f9ba;
-    display: flex;
-    float: left;
-    word-wrap: break-word; */
-
-}
-
-.main-right-center .container .message-received {
-    /* max-width: 50%;
-    padding: 20px;
-    position: relative;
-    /* left: calc(100% - 182px); */
-    /* background-color: #009688; */
-} 
-
-
-
-
-
 /* Main Right Bottom */
 .main-right-bottom {
     width: 100%;
     height: 70px;
     background-color: #eaeaea;
+    display: flex;
+    align-items: center;
+    padding: 5px;
 }
 
+.emoji-icon {
+    width: 10%;
+    font-size: 1.3rem;
+    text-align: center;
+}
+
+.input-message {
+    width: 80%;
+    background-color: #d7f1fd;
+}
+
+.input-message input {
+    width: 100%;
+    height: 40px;
+    padding-left: 15px;
+    outline: none;
+    border: transparent;
+    border-radius: 5px;
+    transition: .1s;
+}
+
+.input-message input:focus {
+    border: 2px solid rgba(211, 211, 211, 0.712);
+}
+
+.vocal-icon {
+    width: 10%;
+    text-align: center;
+    font-size: 1.3rem;
+
+}
