--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@ html {
 main {
     height: 90vh;
     width: 80%;
-    margin: auto ;
     min-width: 950px;
+    margin: 0 auto ;
     margin-top: 5vh;
     background-color: white;
     display: flex;
@@ -86,7 +86,7 @@ main {
 /* Notifications Box */
 .main-left-contacts {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 70px);
 }
 
 .notifications-box {
@@ -154,7 +154,7 @@ main {
 /* Contacts list */
 .contacts-list-box {
     width: 100%;
-    height: calc(100% - 191px);
+    height: calc(100% - 122px);
     overflow: auto;
 }
 
@@ -170,6 +170,10 @@ main {
     width: 55px;
     border-radius: 50%;
     margin-right: 20px;
+}
+
+.contact-box:hover {
+    background-color: #f5f3f3;
 }
 
 .contact-user {
@@ -193,6 +197,10 @@ main {
     top: 10px;
     color: #b1b1b1;
     font-size: .7rem;
+}
+
+.contact--active {
+    background-color: #dddddd;
 }
 
 
@@ -241,8 +249,9 @@ main {
 /* Main Right Center */
 .main-right-center {
     width: 100%;
-    height: calc(100% - 140px);
+    height: calc(100% - 125px);
     background-image: url(../img/mine.jpg);
+    overflow: auto;
 }
 
 .main-right-center .container {
@@ -291,16 +300,16 @@ main {
 /* Main Right Bottom */
 .main-right-bottom {
     width: 100%;
-    height: 70px;
+    height: 55px;
     background-color: #eaeaea;
     display: flex;
     align-items: center;
-    padding: 5px;
 }
 
 .emoji-icon {
     width: 10%;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+    color: gray;
     text-align: center;
 }
 
@@ -326,6 +335,7 @@ main {
 .vocal-icon {
     width: 10%;
     text-align: center;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+    color: gray;
 
 }
