--- a/css/style.css
+++ b/css/style.css
@@ -263,9 +263,9 @@ main {
     position: relative;
 }
 
-.main-right-center .container .mess {
-    padding: 15px;
-    max-width: 40%;
+.mess {
+    padding: 10px 10px 25px 10px;
+    max-width: 50%;
     word-wrap: break-word;
     border-radius: 10px;
     margin-bottom: 10px;
@@ -279,7 +279,7 @@ main {
     bottom: 3px;
     right: 3px;
     color: gray;
-    font-size: .6rem;
+    font-size: .7rem;
 }
 
 .container .received {
@@ -288,12 +288,14 @@ main {
 
 .container .sent {
     background-color: #d5f9ba;
+    padding-right: 100px;
 
 }
 
 .container .right-mess {
     display: flex;
     justify-content: flex-end;
+
 }
 
 
