--- a/css/style.css
+++ b/css/style.css
@@ -271,15 +271,6 @@ main {
     margin-bottom: 10px;
     position: relative;
     margin: 10px 0;
-
-}
-
-.mess-date {
-    position: absolute;
-    bottom: 3px;
-    right: 3px;
-    color: gray;
-    font-size: .7rem;
 }
 
 .container .received {
@@ -288,16 +279,72 @@ main {
 
 .container .sent {
     background-color: #d5f9ba;
-    padding-right: 100px;
+    padding-right: 50px;
+}
 
+.mess.sent:hover {
+    margin-right: 20px;
+    transition: .5s;
 }
 
 .container .right-mess {
     display: flex;
     justify-content: flex-end;
-
 }
 
+/* Arrow Down */
+.arrow-down {
+    color: gray;
+    position: absolute;
+    top: 4px;
+    right: 10px;
+    font-size: .8rem;
+    display: none;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.mess:hover .arrow-down {
+    display: block;
+}
+
+/* Main Arrow */
+.main-arrow {
+    background-color: white;
+    position: absolute;
+    right: 10px;
+    top: 30px;
+    box-shadow: 0px 2px 2px 2px rgba(128, 128, 128, 0.479);
+    border-radius: 3px;
+    z-index: 100;
+    display: none;
+}
+
+.main-arrow div {
+    padding: 20px;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.main-arrow div:hover {
+    background-color: rgb(233, 233, 233);
+}
+
+.main-arrow-active {
+    display: block;
+    transition: .3s;
+}
+
+
+
+/* Mess Date */
+.mess-date {
+    position: absolute;
+    bottom: 3px;
+    right: 3px;
+    color: gray;
+    font-size: .7rem;
+}
 
 /* Main Right Bottom */
 .main-right-bottom {
