--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ main {
 
 .mess.sent:hover {
     margin-right: 20px;
-    transition: .5s;
+    transition: 1s;
 }
 
 .container .right-mess {
@@ -300,7 +300,7 @@ main {
     right: 10px;
     font-size: .8rem;
     display: none;
-    transition: .3s;
+    /* transition: 100s; */
     cursor: pointer;
 }
 
@@ -310,6 +310,7 @@ main {
 
 /* Main Arrow */
 .main-arrow {
+    width: 150px;
     background-color: white;
     position: absolute;
     right: 10px;
@@ -321,7 +322,7 @@ main {
 }
 
 .main-arrow div {
-    padding: 20px;
+    padding: 15px;
     cursor: pointer;
     transition: .3s;
 }
